# smartvideo

./: .env.example  .gitignore  README.md  README.zh-CN.md  brief_glm_zhipu.json  brief_jd.txt  jd_scenes.json  pyproject.toml  requirements.txt
app/: __init__.py  artifacts.py  config.py  llm.py  main.py  remake_clips.py  run.py  utils_messages.py
app/brand/: __init__.py  research.py  research_tools.py  tool_agent.py
app/graph/: __init__.py  graph.py  state.py
app/graph/nodes/: __init__.py  audio.py  brand.py  load_skills.py  scenes.py  skills_llm.py  stitch.py  video.py
app/media/: __init__.py  ffmpeg.py
app/providers/: __init__.py  factory.py  http_video.py  openai_videos.py  video_base.py
app/schemas/: __init__.py  brand.py  storyboard.py
app/skills_loader/: __init__.py  loader.py
docs/: demo-player.html
skills/storyboard_template/: SKILL.md
skills/world_constraints/: SKILL.md
smartvideo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_artifacts.py  test_graph_smoke.py  test_http_video_body.py  test_http_video_retry.py  test_relumi_video.py  test_remake_clips.py  test_skill_loader.py  test_storyboard_validation.py  test_video_node_failover.py
tests/fixtures/: relumi_brand_brief.json
